add . to the pytestargs too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.envFile": ".env"
+    "python.envFile": ".env",
+    "python.testing.pytestArgs": [
+        ".",
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "pythonTestExplorer.testFramework": "pytest"
 }
